// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Next - Explicit resource management > Next - Explicit resource management (fail) > { using {a} = b } 1`] = `
"SyntaxError [1:8-1:9]: 'using' declarations cannot have destructuring patterns
> 1 | { using {a} = b }
    |         ^ 'using' declarations cannot have destructuring patterns"
`;

exports[`Next - Explicit resource management > Next - Explicit resource management (fail) > { using x = a } 1`] = `
"SyntaxError [1:8-1:9]: Unexpected token: 'identifier'
> 1 | { using x = a }
    |         ^ Unexpected token: 'identifier'"
`;

exports[`Next - Explicit resource management > Next - Explicit resource management (fail) > { using x = a, y } 1`] = `
"SyntaxError [1:17-1:18]: 'using' declarations must have an initializer
> 1 | { using x = a, y }
    |                  ^ 'using' declarations must have an initializer"
`;

exports[`Next - Explicit resource management > Next - Explicit resource management (fail) > { using x } 1`] = `
"SyntaxError [1:10-1:11]: 'using' declarations must have an initializer
> 1 | { using x }
    |           ^ 'using' declarations must have an initializer"
`;

exports[`Next - Explicit resource management > Next - Explicit resource management (fail) > async function f() { await using {a} = b } 1`] = `
"SyntaxError [1:33-1:34]: 'await using' declarations cannot have destructuring patterns
> 1 | async function f() { await using {a} = b }
    |                                  ^ 'await using' declarations cannot have destructuring patterns"
`;

exports[`Next - Explicit resource management > Next - Explicit resource management (fail) > async function f() { for (await using x in y); } 1`] = `
"SyntaxError [1:40-1:42]: 'await using' declarations are not allowed in for-in loops
> 1 | async function f() { for (await using x in y); }
    |                                         ^^ 'await using' declarations are not allowed in for-in loops"
`;

exports[`Next - Explicit resource management > Next - Explicit resource management (fail) > await using x = a 1`] = `
"SyntaxError [1:0-1:5]: 'await using' declarations are only allowed inside async functions and at the top level of modules
> 1 | await using x = a
    | ^^^^^ 'await using' declarations are only allowed inside async functions and at the top level of modules"
`;

exports[`Next - Explicit resource management > Next - Explicit resource management (fail) > class C { static { await using x = a } } 1`] = `
"SyntaxError [1:19-1:24]: 'await using' declarations are only allowed inside async functions and at the top level of modules
> 1 | class C { static { await using x = a } }
    |                    ^^^^^ 'await using' declarations are only allowed inside async functions and at the top level of modules"
`;

exports[`Next - Explicit resource management > Next - Explicit resource management (fail) > for (using x = a of y); 1`] = `
"SyntaxError [1:11-1:19]: 'for-of' loop head declarations can not have an initializer
> 1 | for (using x = a of y);
    |            ^^^^^^^^ 'for-of' loop head declarations can not have an initializer"
`;

exports[`Next - Explicit resource management > Next - Explicit resource management (fail) > for (using x in y); 1`] = `
"SyntaxError [1:13-1:15]: 'using' declarations are not allowed in for-in loops
> 1 | for (using x in y);
    |              ^^ 'using' declarations are not allowed in for-in loops"
`;

exports[`Next - Explicit resource management > Next - Explicit resource management (fail) > for (using x, y of z); 1`] = `
"SyntaxError [1:12-1:13]: 'using' declarations must have an initializer
> 1 | for (using x, y of z);
    |             ^ 'using' declarations must have an initializer"
`;

exports[`Next - Explicit resource management > Next - Explicit resource management (fail) > function f() { await using x = a } 1`] = `
"SyntaxError [1:15-1:20]: 'await using' declarations are only allowed inside async functions and at the top level of modules
> 1 | function f() { await using x = a }
    |                ^^^^^ 'await using' declarations are only allowed inside async functions and at the top level of modules"
`;

exports[`Next - Explicit resource management > Next - Explicit resource management (fail) > using x = a 1`] = `
"SyntaxError [1:0-1:5]: 'using' declarations are not allowed in the global scope of a script
> 1 | using x = a
    | ^^^^^ 'using' declarations are not allowed in the global scope of a script"
`;

exports[`Next - Explicit resource management > Next - Explicit resource management (pass) > { using
x = a } 1`] = `
{
  "body": [
    {
      "body": [
        {
          "expression": {
            "name": "using",
            "type": "Identifier",
          },
          "type": "ExpressionStatement",
        },
        {
          "expression": {
            "left": {
              "name": "x",
              "type": "Identifier",
            },
            "operator": "=",
            "right": {
              "name": "a",
              "type": "Identifier",
            },
            "type": "AssignmentExpression",
          },
          "type": "ExpressionStatement",
        },
      ],
      "type": "BlockStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Next - Explicit resource management (pass) > { using [a] = b } 1`] = `
{
  "body": [
    {
      "body": [
        {
          "expression": {
            "left": {
              "computed": true,
              "object": {
                "name": "using",
                "type": "Identifier",
              },
              "optional": false,
              "property": {
                "name": "a",
                "type": "Identifier",
              },
              "type": "MemberExpression",
            },
            "operator": "=",
            "right": {
              "name": "b",
              "type": "Identifier",
            },
            "type": "AssignmentExpression",
          },
          "type": "ExpressionStatement",
        },
      ],
      "type": "BlockStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Next - Explicit resource management (pass) > { using x = a, y = b } 1`] = `
{
  "body": [
    {
      "body": [
        {
          "declarations": [
            {
              "id": {
                "name": "x",
                "type": "Identifier",
              },
              "init": {
                "name": "a",
                "type": "Identifier",
              },
              "type": "VariableDeclarator",
            },
            {
              "id": {
                "name": "y",
                "type": "Identifier",
              },
              "init": {
                "name": "b",
                "type": "Identifier",
              },
              "type": "VariableDeclarator",
            },
          ],
          "kind": "using",
          "type": "VariableDeclaration",
        },
      ],
      "type": "BlockStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Next - Explicit resource management (pass) > async function f() { await
using; } 1`] = `
{
  "body": [
    {
      "async": true,
      "body": {
        "body": [
          {
            "expression": {
              "argument": {
                "name": "using",
                "type": "Identifier",
              },
              "type": "AwaitExpression",
            },
            "type": "ExpressionStatement",
          },
        ],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "f",
        "type": "Identifier",
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Next - Explicit resource management (pass) > async function f() { await using x = a; } 1`] = `
{
  "body": [
    {
      "async": true,
      "body": {
        "body": [
          {
            "declarations": [
              {
                "id": {
                  "name": "x",
                  "type": "Identifier",
                },
                "init": {
                  "name": "a",
                  "type": "Identifier",
                },
                "type": "VariableDeclarator",
              },
            ],
            "kind": "await using",
            "type": "VariableDeclaration",
          },
        ],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "f",
        "type": "Identifier",
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Next - Explicit resource management (pass) > async function f() { for await (await using x of y); } 1`] = `
{
  "body": [
    {
      "async": true,
      "body": {
        "body": [
          {
            "await": true,
            "body": {
              "type": "EmptyStatement",
            },
            "left": {
              "declarations": [
                {
                  "id": {
                    "name": "x",
                    "type": "Identifier",
                  },
                  "init": null,
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "await using",
              "type": "VariableDeclaration",
            },
            "right": {
              "name": "y",
              "type": "Identifier",
            },
            "type": "ForOfStatement",
          },
        ],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "f",
        "type": "Identifier",
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Next - Explicit resource management (pass) > await using x = a 1`] = `
{
  "body": [
    {
      "declarations": [
        {
          "id": {
            "name": "x",
            "type": "Identifier",
          },
          "init": {
            "name": "a",
            "type": "Identifier",
          },
          "type": "VariableDeclarator",
        },
      ],
      "kind": "await using",
      "type": "VariableDeclaration",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Next - Explicit resource management (pass) > for (await using x of y); 1`] = `
{
  "body": [
    {
      "await": false,
      "body": {
        "type": "EmptyStatement",
      },
      "left": {
        "declarations": [
          {
            "id": {
              "name": "x",
              "type": "Identifier",
            },
            "init": null,
            "type": "VariableDeclarator",
          },
        ],
        "kind": "await using",
        "type": "VariableDeclaration",
      },
      "right": {
        "name": "y",
        "type": "Identifier",
      },
      "type": "ForOfStatement",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Next - Explicit resource management (pass) > for (using of of y); 1`] = `
{
  "body": [
    {
      "await": false,
      "body": {
        "type": "EmptyStatement",
      },
      "left": {
        "declarations": [
          {
            "id": {
              "name": "of",
              "type": "Identifier",
            },
            "init": null,
            "type": "VariableDeclarator",
          },
        ],
        "kind": "using",
        "type": "VariableDeclaration",
      },
      "right": {
        "name": "y",
        "type": "Identifier",
      },
      "type": "ForOfStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Next - Explicit resource management (pass) > for (using of y); 1`] = `
{
  "body": [
    {
      "await": false,
      "body": {
        "type": "EmptyStatement",
      },
      "left": {
        "name": "using",
        "type": "Identifier",
      },
      "right": {
        "name": "y",
        "type": "Identifier",
      },
      "type": "ForOfStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Next - Explicit resource management (pass) > for (using x = a;;); 1`] = `
{
  "body": [
    {
      "body": {
        "type": "EmptyStatement",
      },
      "init": {
        "declarations": [
          {
            "id": {
              "name": "x",
              "type": "Identifier",
            },
            "init": {
              "name": "a",
              "type": "Identifier",
            },
            "type": "VariableDeclarator",
          },
        ],
        "kind": "using",
        "type": "VariableDeclaration",
      },
      "test": null,
      "type": "ForStatement",
      "update": null,
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Next - Explicit resource management (pass) > for (using x of y); 1`] = `
{
  "body": [
    {
      "await": false,
      "body": {
        "type": "EmptyStatement",
      },
      "left": {
        "declarations": [
          {
            "id": {
              "name": "x",
              "type": "Identifier",
            },
            "init": null,
            "type": "VariableDeclarator",
          },
        ],
        "kind": "using",
        "type": "VariableDeclaration",
      },
      "right": {
        "name": "y",
        "type": "Identifier",
      },
      "type": "ForOfStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Next - Explicit resource management (pass) > function f() { using x = a; } 1`] = `
{
  "body": [
    {
      "async": false,
      "body": {
        "body": [
          {
            "declarations": [
              {
                "id": {
                  "name": "x",
                  "type": "Identifier",
                },
                "init": {
                  "name": "a",
                  "type": "Identifier",
                },
                "type": "VariableDeclarator",
              },
            ],
            "kind": "using",
            "type": "VariableDeclaration",
          },
        ],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "f",
        "type": "Identifier",
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Next - Explicit resource management (pass) > using in x 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "name": "using",
          "type": "Identifier",
        },
        "operator": "in",
        "right": {
          "name": "x",
          "type": "Identifier",
        },
        "type": "BinaryExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Next - Explicit resource management (pass) > using x = a 1`] = `
{
  "body": [
    {
      "declarations": [
        {
          "id": {
            "name": "x",
            "type": "Identifier",
          },
          "init": {
            "name": "a",
            "type": "Identifier",
          },
          "type": "VariableDeclarator",
        },
      ],
      "kind": "using",
      "type": "VariableDeclaration",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Next - Explicit resource management (pass) > using(x) 1`] = `
{
  "body": [
    {
      "expression": {
        "arguments": [
          {
            "name": "x",
            "type": "Identifier",
          },
        ],
        "callee": {
          "name": "using",
          "type": "Identifier",
        },
        "optional": false,
        "type": "CallExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;
